--- a/index.html
+++ b/index.html
@@ -1,38 +1,46 @@
 ---
 layout: no-banner
-title: CMS project
+title: EHC Hub
 ---
 
-<div class="container-fluid home-bg">
-	<div class="row" style="height:100%;">
-		<div class="col col-md-6 col-lg-4 login-box d-flex justify-content-between p-5 ms-auto">
-			<div class="login-top">
-				<img src="/assets/images/placeholder.jpeg" alt="" height="90" class="ms-auto d-block mb-4">
-				<h4>CMS Portal</h4>
-				<h5>Your time better spent</h5>
-			</div>
-			<div class="login-middle">
-				<h4>Log in</h4>
-				<div class="form mb-3">
-					<label for="emailInput">Email address</label>
-					<input type="email" class="form-control" id="emailInput" placeholder="">
+<div class="container-fluid">
+
+	<div class="row">
+
+		<aside class="d-none d-md-block col-md-6 col-lg-8 g-0 idx-login-img pt-8 px-8">
+
+			<h1 class="idx-message-headline pt-8 mt-8">Education, Health and Care Hub</h1>
+			<p class="idx-message-body mt-6">A space to contribute, track and engage with the EHC needs assessment, plan and review pathways.</p>
+			<p class="idx-message-afterword">Transparency for families, professionals and education settings.</p>
+
+		</aside>
+
+		<main class="col-md-6 col-lg-4 p-7 idx-login-form">
+			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
+			<h2 class="idx-login-name">EHC Hub</h2>
+			<h3 class="idx-login-descriptor">Edgehill Council</h3>
+			<h4 class="idx-login-heading my-7">Log in</h4>
+
+			<div class="alert alert-warning d-none d-flex p-4" role="alert">
+				<div>
+					There is planned maintenance on Friday, 16th February. The hub may be unavailable during this time.
 				</div>
-				<div class="form mb-1">
-					<label for="passwordInput">Password</label>
-					<input type="password" class="form-control" id="passwordInput" placeholder="">
-				</div>
-				<p>
-					<small><a href="#">Forgotten password?</a></small>
-				</p>
-				<p>
-					<a class="btn btn-primary mt-3" href="/work-tray">Log in</a>
-				</p>
 			</div>
-			<div class="login-bottom">
-				<p class="text-center">
-					<small><a href="#"><i class="bi bi-info-circle"></i> Terms of use</a></small>
-				</p>
+
+			<div class="form mb-3">
+				<label for="emailInput">Email address</label>
+				<input type="email" class="form-control" id="emailInput" placeholder="">
 			</div>
-		</div>
+			<div class="form mb-3">
+				<label for="passwordInput">Password</label>
+				<input type="password" class="form-control" id="passwordInput" placeholder="">
+			</div>
+			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
+			<p class="text-center"><a href="#">Forgotten password?</a></p>
+			<p class="text-center"><a href="#">New request</a></p>
+			<p class="text-center"><a href="#">Terms of use</a></p>
+		</main>
+
 	</div>
+
 </div>
