Add top margin to actions buttons

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ title: EHC Hub
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
 			<p class="text-center"><a href="#">Forgotten password?</a></p>
-			<p class="text-center"><a href="#">New request</a></p>
-			<p class="text-center"><a href="#">Terms of use</a></p>
+			<p class="text-center"><a href="#">Request needs assessment</a></p>
 		</main>
 
 	</div>
