--- a/reports/index.html
+++ b/reports/index.html
@@ -31,7 +31,7 @@ title: Reporting
            <thead>
              <tr>
                <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
-               <th scope="col">Description</th>
+               <th scope="col" class="d-none d-md-table-cell">Description</th>
                <th scope="col">Type</th>
                <th scope="col">Action</th>
              </tr>
@@ -39,73 +39,73 @@ title: Reporting
            <tbody>
              <tr>
                <td>Assessment and planning</td>
-               <td>Key information from the assessment and planning pathway.</td>
+               <td class="d-none d-md-table-cell">Key information from the assessment and planning pathway.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Education settings</td>
-               <td>Details of all education settings in the Hub.</td>
+               <td class="d-none d-md-table-cell">Details of all education settings in the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Cases</td>
-               <td>Key information for every case.</td>
+               <td class="d-none d-md-table-cell">Key information for every case.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Panel meetings</td>
-               <td>Details of all panel meetings.</td>
+               <td class="d-none d-md-table-cell">Details of all panel meetings.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Plans</td>
-               <td>All draft and issued EHC Plans in the Hub.</td>
+               <td class="d-none d-md-table-cell">All draft and issued EHC Plans in the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Requests for advice</td>
-               <td>Details of every request for advice.</td>
+               <td class="d-none d-md-table-cell">Details of every request for advice.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Requests for information</td>
-               <td>Details of all requests for information ahead of a review meeting.</td>
+               <td class="d-none d-md-table-cell">Details of all requests for information ahead of a review meeting.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Reviews</td>
-               <td>Every review of an EHC Plan carried out on the Hub.</td>
+               <td class="d-none d-md-table-cell">Every review of an EHC Plan carried out on the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Setting consultations</td>
-               <td>Details of all education setting consultations for draft and proposed amended EHC Plans.</td>
+               <td class="d-none d-md-table-cell">Details of all education setting consultations for draft and proposed amended EHC Plans.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Subjects</td>
-               <td>All children and young people in the Hub.</td>
+               <td class="d-none d-md-table-cell">All children and young people in the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Teams</td>
-               <td>Details of all teams of professionals in the Hub.</td>
+               <td class="d-none d-md-table-cell">Details of all teams of professionals in the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
              <tr>
                <td>Users</td>
-               <td>Details of every user account in the Hub.</td>
+               <td class="d-none d-md-table-cell">Details of every user account in the Hub.</td>
                <td>CSV</td>
                <td><a href="#">Download</a></td>
              </tr>
