--- a/case-view/index.html
+++ b/case-view/index.html
@@ -16,7 +16,7 @@ title: EHC Hub
 
         {% include assessment-progress.html %}
 
-        <div class="d-flex justify-content-between text-neutral-500">
+        <div class="d-md-flex justify-content-md-between text-neutral-500">
           <p>Plan decision: 17 Dec 2022</p>
           <p>Plan due: 14 Jan 2023</p>
         </div>
@@ -30,7 +30,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Section A</h5>
               </div>
               <div class="card-body">
@@ -42,7 +42,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Sections B, E, F</h5>
               </div>
               <div class="card-body">
@@ -54,7 +54,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Sections C, E, G</h5>
               </div>
               <div class="card-body">
@@ -66,7 +66,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Sections D, E, H1, H2</h5>
               </div>
               <div class="card-body">
@@ -78,7 +78,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Section I</h5>
               </div>
               <div class="card-body">
@@ -90,7 +90,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Section J</h5>
               </div>
               <div class="card-body">
@@ -102,7 +102,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-secondary-50">
                 <h5 class="m-0">Section K</h5>
               </div>
               <div class="card-body">
@@ -114,7 +114,7 @@ title: EHC Hub
 
           <div class="col">
             <div class="card h-100">
-              <div class="card-header">
+              <div class="card-header bg-success-50">
                 <h5 class="m-0">Downloads</h5>
               </div>
               <div class="card-body">
